--- a/notebook/mission_to_mars.ipynb
+++ b/notebook/mission_to_mars.ipynb
@@ -77,15 +77,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#print(soup)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -104,40 +95,6 @@
     "#get the first paragraph\n",
     "pargs = soup.find_all('div', class_='article_teaser_body', limit = 1)\n",
     "news_p = pargs[0].text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MOXIE Could Help Future Rockets Launch Off Mars\n"
-     ]
-    }
-   ],
-   "source": [
-    "#print(news_title)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NASA's Perseverance rover carries a device to convert Martian air into oxygen that, if produced on a larger scale, could be used not just for breathing, but also for fuel.\n"
-     ]
-    }
-   ],
-   "source": [
-    "#print(news_p)"
    ]
   },
   {
@@ -234,7 +191,7 @@
     "## Mars Facts\n",
     "- scrape using read_html\n",
     "- create a data frame\n",
-    "- conver to html table string"
+    "- convert to html table string"
    ]
   },
   {
@@ -259,82 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Equatorial Diameter:</td>\n",
-       "      <td>6,792 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Polar Diameter:</td>\n",
-       "      <td>6,752 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mass:</td>\n",
-       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Moons:</td>\n",
-       "      <td>2 (Phobos &amp; Deimos)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Orbit Distance:</td>\n",
-       "      <td>227,943,824 km (1.38 AU)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      0                              1\n",
-       "0  Equatorial Diameter:                       6,792 km\n",
-       "1       Polar Diameter:                       6,752 km\n",
-       "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
-       "3                Moons:            2 (Phobos & Deimos)\n",
-       "4       Orbit Distance:       227,943,824 km (1.38 AU)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#creat a dataframe from the scrape\n",
-    "df = table[0]\n",
-    "df.head(5)"
+    "df = table[0]"
    ]
   },
   {
@@ -348,82 +235,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<table border=\"1\" class=\"dataframe\">\n",
-      "  <thead>\n",
-      "    <tr style=\"text-align: right;\">\n",
-      "      <th></th>\n",
-      "      <th>0</th>\n",
-      "      <th>1</th>\n",
-      "    </tr>\n",
-      "  </thead>\n",
-      "  <tbody>\n",
-      "    <tr>\n",
-      "      <th>0</th>\n",
-      "      <td>Equatorial Diameter:</td>\n",
-      "      <td>6,792 km</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>1</th>\n",
-      "      <td>Polar Diameter:</td>\n",
-      "      <td>6,752 km</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>2</th>\n",
-      "      <td>Mass:</td>\n",
-      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>3</th>\n",
-      "      <td>Moons:</td>\n",
-      "      <td>2 (Phobos &amp; Deimos)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>4</th>\n",
-      "      <td>Orbit Distance:</td>\n",
-      "      <td>227,943,824 km (1.38 AU)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>5</th>\n",
-      "      <td>Orbit Period:</td>\n",
-      "      <td>687 days (1.9 years)</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>6</th>\n",
-      "      <td>Surface Temperature:</td>\n",
-      "      <td>-87 to -5 °C</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>7</th>\n",
-      "      <td>First Record:</td>\n",
-      "      <td>2nd millennium BC</td>\n",
-      "    </tr>\n",
-      "    <tr>\n",
-      "      <th>8</th>\n",
-      "      <td>Recorded By:</td>\n",
-      "      <td>Egyptian astronomers</td>\n",
-      "    </tr>\n",
-      "  </tbody>\n",
-      "</table>\n"
-     ]
-    }
-   ],
-   "source": [
-    "#print(html_table)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mars Hemispheres"
+    "## Mars Hemispheres\n",
+    "- opening the browser\n",
+    "- looping through the websitet to grab the title and URL"
    ]
   },
   {
@@ -478,23 +295,6 @@
     "    browser.visit(url)\n",
     "    \n",
     "browser.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': '/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': '/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': '/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': '/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#print(hemisphere_image_urls)"
    ]
   }
  ],
