trying to get everything sorted

--- a/notebook/mission_to_mars.ipynb
+++ b/notebook/mission_to_mars.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,8 @@
     "from bs4 import BeautifulSoup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/spaceimages/images/wallpaper/PIA17357-1920x1200.jpg\n"
+      "/spaceimages/images/wallpaper/PIA16883-1920x1200.jpg\n"
      ]
     }
    ],
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,22 +262,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'title': 'Cerberus Hemisphere Enhanced', 'img_url': '/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': '/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': '/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': '/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "links = browser.find_by_css('a.product-item h3')\n",
     "\n",
     "hemisphere_image_urls = []\n",
     "\n",
+    "main_url = 'https://astrogeology.usgs.gov'\n",
     "for x in range(len(links)):\n",
     "    mars = {}\n",
     "    \n",
@@ -288,7 +282,7 @@
     "    \n",
     "    browser.links.find_by_partial_text('Open').click()\n",
     "    \n",
-    "    mars['img_url'] = soup.find('img', class_='wide-image')['src']\n",
+    "    mars['img_url'] = main_url + str(soup.find('img', class_='wide-image')['src'])\n",
     "    \n",
     "    hemisphere_image_urls.append(mars)\n",
     "    \n",
@@ -296,6 +290,107 @@
     "    \n",
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'featured img': '/spaceimages/images/wallpaper/PIA16883-1920x1200.jpg',\n",
+      " 'hemispheres': [{'img_url': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
+      "                  'title': 'Cerberus Hemisphere Enhanced'},\n",
+      "                 {'img_url': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
+      "                  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+      "                 {'img_url': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
+      "                  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+      "                 {'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg',\n",
+      "                  'title': 'Valles Marineris Hemisphere Enhanced'}],\n",
+      " 'news paragraph': \"NASA's Perseverance rover carries a device to convert \"\n",
+      "                   'Martian air into oxygen that, if produced on a larger '\n",
+      "                   'scale, could be used not just for breathing, but also for '\n",
+      "                   'fuel.',\n",
+      " 'news title': 'MOXIE Could Help Future Rockets Launch Off Mars',\n",
+      " 'table': '<table border=\"1\" class=\"dataframe\">\\n'\n",
+      "          '  <thead>\\n'\n",
+      "          '    <tr style=\"text-align: right;\">\\n'\n",
+      "          '      <th></th>\\n'\n",
+      "          '      <th>0</th>\\n'\n",
+      "          '      <th>1</th>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '  </thead>\\n'\n",
+      "          '  <tbody>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>0</th>\\n'\n",
+      "          '      <td>Equatorial Diameter:</td>\\n'\n",
+      "          '      <td>6,792 km</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>1</th>\\n'\n",
+      "          '      <td>Polar Diameter:</td>\\n'\n",
+      "          '      <td>6,752 km</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>2</th>\\n'\n",
+      "          '      <td>Mass:</td>\\n'\n",
+      "          '      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>3</th>\\n'\n",
+      "          '      <td>Moons:</td>\\n'\n",
+      "          '      <td>2 (Phobos &amp; Deimos)</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>4</th>\\n'\n",
+      "          '      <td>Orbit Distance:</td>\\n'\n",
+      "          '      <td>227,943,824 km (1.38 AU)</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>5</th>\\n'\n",
+      "          '      <td>Orbit Period:</td>\\n'\n",
+      "          '      <td>687 days (1.9 years)</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>6</th>\\n'\n",
+      "          '      <td>Surface Temperature:</td>\\n'\n",
+      "          '      <td>-87 to -5 °C</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>7</th>\\n'\n",
+      "          '      <td>First Record:</td>\\n'\n",
+      "          '      <td>2nd millennium BC</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '    <tr>\\n'\n",
+      "          '      <th>8</th>\\n'\n",
+      "          '      <td>Recorded By:</td>\\n'\n",
+      "          '      <td>Egyptian astronomers</td>\\n'\n",
+      "          '    </tr>\\n'\n",
+      "          '  </tbody>\\n'\n",
+      "          '</table>'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "mars_dict = {\n",
+    "        'news title': news_title,\n",
+    "        'news paragraph': news_p,\n",
+    "        'featured img': img_url,\n",
+    "        'table': html_table,\n",
+    "        'hemispheres' : hemisphere_image_urls\n",
+    "    }\n",
+    "\n",
+    "pprint(mars_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
